# infinite-agent-streams

./: readme.md
a2a-inspector/: .dockerignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  noxfile.py  pyproject.toml  run.sh
a2a-inspector/.github/: CODEOWNERS
a2a-inspector/.github/workflows/: linter.yaml  (+1 more)
a2a-inspector/backend/: app.py
a2a-inspector/frontend/: .eslintignore  package-lock.json  package.json  tsconfig.json
a2a-inspector/tests/: test_validators.py
r1-a2a-agents/: .env  README.md  main.py  pyproject.toml
r1-a2a-agents/financial_advisor/: a2a_serve.py  agent_core.py  executor.py  profile.py
r2-a2a-dapr-eda-agents/: README.md  Tiltfile
r2-a2a-dapr-eda-agents/a2a-bff/: a2a_serve.py  executor.py  main.py
r2-a2a-dapr-eda-agents/financial-advisor-agent/: agent_core.py  main.py  pyproject.toml
r2-a2a-dapr-eda-agents/kubernetes/: a2a-bff-deploy.yaml  financial-advisor-agent-deploy.yaml
r3-a2a-dapr-actors/: README.md  Tiltfile
r3-a2a-dapr-actors/a2a-bff/: Dockerfile  executor.py  pyproject.toml
r3-a2a-dapr-actors/components/: statestore.yaml
r3-a2a-dapr-actors/financial-advisor-agent/: Dockerfile  main.py
r4-p1-build-stream-injector/: pyproject.toml
r4-p1-build-stream-injector/r_example/: a2a_serve.py  executor.py
r4-p2-dapr-actors-stream-injector/financial-advisor-agent/: .dockerignore  agent_core.py  main.py  pyproject.toml
r4-p2-dapr-actors-stream-injector/financial-advisor-agent/a2a_extensions/redis/: redis_queue_manager.py
r4-p2-dapr-actors-stream-injector/financial-advisor-agent/actors/: base_actor.py
(+22 files in other folders)
